# ESP32-SIP

./: CMakeLists.txt  README.md  alaw.c  sip.c  sipsin.c  siptools.c  ulaw.c
include/: sip.h  siptools.h
